--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3"
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "prisma": "^6.11.1"
